--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Грицай Р-В. М., ІМ-31</title>
+  <title>Грицай Р-В. М., ІМ-31, 1</title>
 
   <!-- Uncomment Link tag below to connect .css file -->
   <!-- <link rel="stylesheet" href="./css/style.css"> -->
