Changed columns width

--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <table border="1">
+        <colgroup>
+            <col style="width:25%">
+            <col style="width:12.5%">
+            <col style="width:12.5%">
+        </colgroup>
+
         <tr class="row1">
             <td>Грицай</td>
             <td colspan="2">Руслан-Владислав</td>
