Add one column to the table

--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -12,6 +12,7 @@
             <col style="width:25%">
             <col style="width:12.5%">
             <col style="width:12.5%">
+            <col>
         </colgroup>
 
         <tr class="row1">
@@ -30,14 +31,12 @@
             <td>5</td>
         </tr>
 
-
         <tr>
             <td></td>
             <td colspan="2"></td>
             <td></td>
         </tr>
     </table>
-
 
     <div class="wrapper">
         <div class="venn-position">
