Add two pages for float and flex pages

--- a/Lab3/index2.html
+++ b/Lab3/index2.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="container float">
+    <div class="container flex">
         <div class="header">
             <h2>Text</h2>
         </div>
         <div class="main">
         <div class="text">
             <h2>Text</h2>
-            <a href="./index2.html">Change to flex</a>
+            <a href="./index.html">Change to float</a>
         </div>
         <div class="sideimg">
             <h2>Img.</h2>
@@ -24,5 +24,5 @@
             <h2>Img.</h2>
         </div>
     </div>
-</body>
+    </body>
 </html>
