Changed code in html and added styles for columns height/width

--- a/Lab3/index2.html
+++ b/Lab3/index2.html
@@ -12,16 +12,16 @@
             <h2>Text</h2>
         </div>
         <div class="main">
-        <div class="text">
+        <div class="text centerText">
             <h2>Text</h2>
-            <a href="./index.html">Change to float</a>
         </div>
-        <div class="sideimg">
+        <div class="sideimg centerText">
             <h2>Img.</h2>
         </div>
         </div>
         <div class="footer">
             <h2>Img.</h2>
+            <a href="./index.html">Change to float</a>
         </div>
     </div>
     </body>
