--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -12,16 +12,16 @@
             <h2>Text</h2>
         </div>
         <div class="main">
-        <div class="text">
+        <div class="text textfloat">
             <h2>Text</h2>
-            <a href="./index2.html">Change to flex</a>
         </div>
-        <div class="sideimg">
+        <div class="sideimg textfloat">
             <h2>Img.</h2>
         </div>
         </div>
         <div class="footer">
             <h2>Img.</h2>
+            <a href="./index2.html">Change to flex</a>
         </div>
     </div>
 </body>
