--- a/Lab4/index.html
+++ b/Lab4/index.html
@@ -1,12 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Грицай Р-В. М., ІМ-31, 2</title>
-    <link rel="stylesheet" href="./css/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Грицай Р-В. М., ІМ-31, 4</title>
+
+  <!-- Uncomment Link tag below to connect .css file -->
+  <!-- <link rel="stylesheet" href="./css/style.css"> -->
+   
+  <meta name="keywords" content="прізвище, ім'я, група, студент, хобі">
+  <meta name="description" content="Персональна навчальна сторінка студента з HTML-5">
 </head>
 <body>
+  <header>
+    <h1>Мова гіпертекстової розмітки сайту HTML-5</h1>
+  </header>
 
+  <main>
+    <section>
+      <h2>Грицай Руслан-Владислав М.</h2>
+
+      <p>Народився: 17 червня 2000 року, м. Київ.</p>
+
+      <p>Освіта: Гімназія №59, КПІ імені Ігоря СМікорського, (ФІОТ) спеціальність «Інженерія Програмного забезпечення».</p>
+    </section>
+
+    <section>
+      <h3>Мої хобі</h3>
+      <ul>
+        <li>Розв'язок головоломків</li>
+        <li>Front-end розробка та С# програмування</li>
+        <li>Волейбол</li>
+        <li>Подорожі та прогулянки</li>
+      </ul>
+    </section>
+
+    <section>
+      <h3>Улюблені фільми</h3>
+      <ol>
+        <li>Інтерстеллар</li>
+        <li>Той що біжить по лезу / Той що біжить по лезу 2049</li>
+        <li>Шалений Макс: Дорога гніву</li>
+        <li>Матриця: трилогія</li>
+      </ol>
+    </section>
+
+    <section>
+      <h3>Валенсія</h3>
+      <p>Валенсія – місто на березі Середземного моря, столиця автономної області Валенсія, третє за величиною місто Іспанії, засноване 138 років до н.е. Особливістю міста є футуристичний комплекс Місто мистецтва і наук та величезний парк на осушеному дні річки Турія.</p>
+      <p>Місто Валенсія розташований на середземноморському узбережжі Піренейського півострова, у великій заплаві річок Хукар і Турія, на березі Валенсійської затоки. Стародавнє місто перебувало
+         приблизно за чотири кілометри від моря, на річковому острові Турія. Найближчі до міста гори — Кабесоль-де-Ель-Пуїг і Сьєрра-Кальдерона, передгір'я Іберійської системи (приблизно за 12 і 25 км на північ від міста відповідно). Центр міста лежить на висоті 11 метрів над рівнем моря.</p>
+
+      <figure>
+        <a href="https://continentestate.com/uk/valencia/" target="_blank" rel="noopener">
+          <img src="images/image.png" alt="Панорама улюбленого міста з набережною">
+        </a>
+      </figure>
+    </section>
+  </main>
 </body>
 </html>
