Add interactive table

--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -41,6 +41,16 @@
         </div>
     </div>
 
+    <div class="form_wrapper">
+        <div class="table_form">
+            <label>Обрати колір для кліку: <input type="color" id="chosenColor" value="#00ff00"></label>
+            <button id="clearTable">Очистити таблицю</button>
+        </div>
+
+        <table id="table6x6"></table>
+    </div>
+    
     <script src="js/data.js"></script>
+    <script src="js/table.js"></script>
 </body>
 </html>
